tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__plot_options__plot_range_both_axes.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Plot[Sin[x], {x, 0, 2 Pi}, PlotRange -> {{0.5, 2}, {-0.5, 0.5}}]\")"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#5E81B5" stroke-width="15" points="419,143 429,133 467,100 "/>
<line x1="419.0" y1="1125.0" x2="3500.0" y2="1125.0" stroke="#666" stroke-width="5"/>
<line x1="521.7" y1="1125.0" x2="521.7" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="624.4" y1="1125.0" x2="624.4" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="727.1" y1="1125.0" x2="727.1" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="829.8" y1="1125.0" x2="829.8" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1035.2" y1="1125.0" x2="1035.2" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1137.9" y1="1125.0" x2="1137.9" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1240.6" y1="1125.0" x2="1240.6" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1343.3" y1="1125.0" x2="1343.3" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1548.7" y1="1125.0" x2="1548.7" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1651.4" y1="1125.0" x2="1651.4" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1754.1" y1="1125.0" x2="1754.1" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1856.8" y1="1125.0" x2="1856.8" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2062.2" y1="1125.0" x2="2062.2" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2164.9" y1="1125.0" x2="2164.9" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2267.6" y1="1125.0" x2="2267.6" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2370.3" y1="1125.0" x2="2370.3" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2575.7" y1="1125.0" x2="2575.7" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2678.4" y1="1125.0" x2="2678.4" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2781.1" y1="1125.0" x2="2781.1" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2883.8" y1="1125.0" x2="2883.8" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="3089.2" y1="1125.0" x2="3089.2" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="3191.9" y1="1125.0" x2="3191.9" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="3294.6" y1="1125.0" x2="3294.6" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="3397.3" y1="1125.0" x2="3397.3" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1125.0" x2="419.0" y2="1085.0" stroke="#666" stroke-width="5"/>
<line x1="932.5" y1="1125.0" x2="932.5" y2="1085.0" stroke="#666" stroke-width="5"/>
<text x="932.5" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">0.75</text>
<line x1="1446.0" y1="1125.0" x2="1446.0" y2="1085.0" stroke="#666" stroke-width="5"/>
<text x="1446.0" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.00</text>
<line x1="1959.5" y1="1125.0" x2="1959.5" y2="1085.0" stroke="#666" stroke-width="5"/>
<text x="1959.5" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.25</text>
<line x1="2473.0" y1="1125.0" x2="2473.0" y2="1085.0" stroke="#666" stroke-width="5"/>
<text x="2473.0" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.50</text>
<line x1="2986.5" y1="1125.0" x2="2986.5" y2="1085.0" stroke="#666" stroke-width="5"/>
<text x="2986.5" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.75</text>
<line x1="3500.0" y1="1125.0" x2="3500.0" y2="1085.0" stroke="#666" stroke-width="5"/>
<text x="3500.0" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2.00</text>
<line x1="419.0" y1="100.0" x2="419.0" y2="2150.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="2109.0" x2="443.0" y2="2109.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="2027.0" x2="443.0" y2="2027.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1863.0" x2="443.0" y2="1863.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1781.0" x2="443.0" y2="1781.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1699.0" x2="443.0" y2="1699.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1617.0" x2="443.0" y2="1617.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1453.0" x2="443.0" y2="1453.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1371.0" x2="443.0" y2="1371.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1289.0" x2="443.0" y2="1289.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1207.0" x2="443.0" y2="1207.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1043.0" x2="443.0" y2="1043.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="961.0" x2="443.0" y2="961.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="879.0" x2="443.0" y2="879.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="797.0" x2="443.0" y2="797.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="633.0" x2="443.0" y2="633.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="551.0" x2="443.0" y2="551.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="469.0" x2="443.0" y2="469.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="387.0" x2="443.0" y2="387.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="223.0" x2="443.0" y2="223.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="141.0" x2="443.0" y2="141.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1945.0" x2="459.0" y2="1945.0" stroke="#666" stroke-width="5"/>
<text x="371.8" y="1981.8" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-0.4</text>
<line x1="419.0" y1="1535.0" x2="459.0" y2="1535.0" stroke="#666" stroke-width="5"/>
<text x="371.8" y="1571.8" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-0.2</text>
<line x1="419.0" y1="1125.0" x2="459.0" y2="1125.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="715.0" x2="459.0" y2="715.0" stroke="#666" stroke-width="5"/>
<text x="371.8" y="751.8" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">0.2</text>
<line x1="419.0" y1="305.0" x2="459.0" y2="305.0" stroke="#666" stroke-width="5"/>
<text x="371.8" y="341.8" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">0.4</text>
</svg>
