tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__plot_options__plot_style_directive_per_series.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Plot[{Sin[x], Cos[x]}, {x, 0, 2 Pi}, PlotStyle -> {Directive[Red, Thick], Directive[Blue, Dashed]}]\")"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#FF0000" stroke-width="20" points="419,1125 434,1095 449,1065 465,1035 480,1006 496,976 511,946 527,917 542,888 558,859 573,830 589,802 604,774 620,746 635,719 651,692 666,666 682,640 697,614 713,589 728,565 744,541 759,518 774,495 790,473 805,452 821,431 836,411 852,391 867,373 883,355 898,338 914,322 929,306 945,291 960,277 976,264 991,252 1007,241 1022,231 1038,221 1053,212 1069,205 1084,198 1100,192 1107,189 1115,187 1123,185 1130,183 1138,181 1146,180 1150,179 1154,179 1158,178 1161,178 1165,177 1169,177 1171,177 1173,177 1175,177 1177,177 1179,177 1180,177 1181,177 1182,176 1183,176 1184,176 1184,176 1185,176 1185,176 1186,176 1186,176 1186,176 1187,176 1187,176 1187,176 1187,176 1188,176 1188,176 1188,176 1188,176 1189,176 1189,176 1189,176 1189,176 1189,176 1190,176 1190,176 1190,176 1190,176 1191,176 1191,176 1192,176 1192,176 1193,176 1194,176 1195,176 1196,177 1198,177 1200,177 1202,177 1204,177 1208,177 1212,177 1216,178 1219,178 1223,179 1231,180 1239,181 1247,183 1254,185 1270,189 1285,195 1301,201 1316,208 1332,217 1347,226 1363,236 1378,246 1394,258 1409,271 1425,284 1440,299 1455,314 1471,330 1486,346 1502,364 1517,382 1533,401 1548,421 1564,441 1579,462 1595,484 1610,506 1626,529 1641,553 1657,577 1672,602 1688,627 1703,653 1719,679 1734,706 1750,733 1765,760 1781,788 1796,816 1811,845 1827,873 1842,902 1858,932 1873,961 1889,991 1904,1020 1920,1050 1935,1080 1951,1110 1966,1140 1982,1170 1997,1200 2013,1230 2028,1259 2044,1289 2059,1318 2075,1348 2090,1377 2106,1405 2121,1434 2136,1462 2152,1490 2167,1517 2183,1544 2198,1571 2214,1597 2229,1623 2245,1648 2260,1673 2276,1697 2291,1721 2307,1744 2322,1766 2338,1788 2353,1809 2369,1829 2384,1849 2400,1868 2415,1886 2431,1904 2446,1920 2462,1936 2477,1951 2492,1966 2508,1979 2523,1992 2539,2004 2554,2014 2570,2024 2585,2033 2601,2042 2616,2049 2632,2055 2647,2061 2655,2063 2663,2065 2670,2067 2678,2069 2686,2070 2690,2071 2694,2071 2698,2072 2701,2072 2705,2073 2709,2073 2711,2073 2713,2073 2715,2073 2717,2073 2719,2073 2720,2073 2721,2074 2722,2074 2723,2074 2724,2074 2724,2074 2725,2074 2725,2074 2726,2074 2726,2074 2726,2074 2727,2074 2727,2074 2727,2074 2727,2074 2728,2074 2728,2074 2728,2074 2728,2074 2729,2074 2729,2074 2729,2074 2729,2074 2729,2074 2730,2074 2730,2074 2730,2074 2730,2074 2731,2074 2731,2074 2732,2074 2732,2074 2733,2074 2734,2074 2735,2074 2736,2074 2738,2073 2740,2073 2742,2073 2744,2073 2748,2073 2752,2073 2756,2072 2759,2072 2763,2071 2771,2070 2779,2069 2787,2067 2794,2065 2802,2063 2817,2058 2833,2052 2848,2045 2864,2038 2879,2029 2895,2020 2910,2009 2926,1998 2941,1986 2957,1973 2972,1959 2988,1944 3003,1929 3019,1912 3034,1895 3050,1877 3065,1859 3081,1839 3096,1819 3112,1798 3127,1777 3143,1755 3158,1732 3173,1709 3189,1685 3204,1661 3220,1636 3235,1610 3251,1584 3266,1558 3282,1531 3297,1504 3313,1476 3328,1448 3344,1420 3359,1391 3375,1362 3390,1333 3406,1304 3421,1274 3437,1245 3452,1215 3468,1185 3483,1155 3499,1125 "/>
<polyline fill="none" stroke="rgb(0,0,255)" stroke-width="15" stroke-dasharray="40.0,40.0" stroke-linecap="round" points="419.0,175.9 419.2,175.9 419.5,175.9 419.7,175.9 420.0,175.9 420.2,175.9 420.5,175.9 420.7,175.9 420.9,175.9 421.4,175.9 421.9,175.9 422.4,175.9 422.9,176.0 423.8,176.0 424.8,176.0 425.8,176.0 426.7,176.0 428.7,176.1 430.6,176.2 432.5,176.3 434.5,176.4 438.4,176.7 442.2,177.0 446.1,177.4 450.0,177.8 457.7,178.9 465.4,180.2 473.2,181.7 480.9,183.5 496.4,187.7 511.9,192.9 527.4,199.0 542.9,206.0 558.3,214.0 573.8,222.8 589.3,232.6 604.8,243.2 620.3,254.8 635.8,267.1 651.2,280.4 666.7,294.5 682.2,309.4 697.7,325.1 713.2,341.6 728.6,359.0 744.1,377.0 759.6,395.8 775.1,415.4 790.6,435.6 806.1,456.6 821.5,478.2 837.0,500.4 852.5,523.3 868.0,546.8 883.5,570.8 899.0,595.4 914.4,620.5 929.9,646.2 945.4,672.3 960.9,698.8 976.4,725.8 991.8,753.2 1007.3,780.9 1022.8,809.0 1038.3,837.4 1053.8,866.1 1069.3,895.1 1084.7,924.3 1100.2,953.7 1115.7,983.2 1131.2,1012.9 1146.7,1042.7 1162.2,1072.6 1177.6,1102.5 1193.1,1132.5 1208.6,1162.5 1224.1,1192.4 1239.6,1222.2 1255.1,1252.0 1270.5,1281.6 1286.0,1311.1 1301.5,1340.4 1317.0,1369.5 1332.5,1398.3 1347.9,1426.8 1363.4,1455.1 1378.9,1483.0 1394.4,1510.6 1409.9,1537.8 1425.4,1564.5 1440.8,1590.9 1456.3,1616.8 1471.8,1642.1 1487.3,1667.0 1502.8,1691.3 1518.3,1715.1 1533.7,1738.3 1549.2,1760.8 1564.7,1782.7 1580.2,1804.0 1595.7,1824.6 1611.1,1844.5 1626.6,1863.7 1642.1,1882.1 1657.6,1899.8 1673.1,1916.7 1688.6,1932.9 1704.0,1948.2 1719.5,1962.7 1735.0,1976.4 1750.5,1989.2 1766.0,2001.1 1781.5,2012.2 1796.9,2022.4 1812.4,2031.7 1827.9,2040.1 1843.4,2047.6 1858.9,2054.2 1874.3,2059.8 1882.1,2062.3 1889.8,2064.5 1897.6,2066.5 1905.3,2068.3 1913.1,2069.8 1920.8,2071.1 1924.7,2071.7 1928.5,2072.2 1932.4,2072.7 1936.3,2073.0 1940.1,2073.4 1942.1,2073.5 1944.0,2073.6 1946.0,2073.7 1947.9,2073.8 1949.8,2073.9 1950.8,2074.0 1951.8,2074.0 1952.7,2074.0 1953.7,2074.0 1954.7,2074.1 1955.1,2074.1 1955.6,2074.1 1956.1,2074.1 1956.6,2074.1 1957.1,2074.1 1957.3,2074.1 1957.6,2074.1 1957.8,2074.1 1958.0,2074.1 1958.3,2074.1 1958.5,2074.1 1958.8,2074.1 1959.0,2074.1 1959.3,2074.1 1959.5,2074.1 1959.7,2074.1 1960.0,2074.1 1960.2,2074.1 1960.5,2074.1 1960.7,2074.1 1961.0,2074.1 1961.2,2074.1 1961.4,2074.1 1961.9,2074.1 1962.4,2074.1 1962.9,2074.1 1963.4,2074.1 1964.3,2074.1 1965.3,2074.0 1966.3,2074.0 1967.2,2074.0 1969.2,2073.9 1971.1,2073.8 1973.0,2073.7 1975.0,2073.6 1978.9,2073.4 1982.7,2073.0 1986.6,2072.7 1990.5,2072.2 1998.2,2071.1 2005.9,2069.8 2013.7,2068.3 2021.4,2066.5 2029.2,2064.5 2044.7,2059.8 2060.1,2054.2 2075.6,2047.6 2091.1,2040.1 2106.6,2031.7 2122.1,2022.4 2137.5,2012.2 2153.0,2001.1 2168.5,1989.2 2184.0,1976.4 2199.5,1962.7 2215.0,1948.2 2230.4,1932.9 2245.9,1916.7 2261.4,1899.8 2276.9,1882.1 2292.4,1863.7 2307.9,1844.5 2323.3,1824.6 2338.8,1804.0 2354.3,1782.7 2369.8,1760.8 2385.3,1738.3 2400.7,1715.1 2416.2,1691.3 2431.7,1667.0 2447.2,1642.1 2462.7,1616.8 2478.2,1590.9 2493.6,1564.5 2509.1,1537.8 2524.6,1510.6 2540.1,1483.0 2555.6,1455.1 2571.1,1426.8 2586.5,1398.3 2602.0,1369.5 2617.5,1340.4 2633.0,1311.1 2648.5,1281.6 2663.9,1252.0 2679.4,1222.2 2694.9,1192.4 2710.4,1162.5 2725.9,1132.5 2741.4,1102.5 2756.8,1072.6 2772.3,1042.7 2787.8,1012.9 2803.3,983.2 2818.8,953.7 2834.3,924.3 2849.7,895.1 2865.2,866.1 2880.7,837.4 2896.2,809.0 2911.7,780.9 2927.2,753.2 2942.6,725.8 2958.1,698.8 2973.6,672.3 2989.1,646.2 3004.6,620.5 3020.0,595.4 3035.5,570.8 3051.0,546.8 3066.5,523.3 3082.0,500.4 3097.5,478.2 3112.9,456.6 3128.4,435.6 3143.9,415.4 3159.4,395.8 3174.9,377.0 3190.4,359.0 3205.8,341.6 3221.3,325.1 3236.8,309.4 3252.3,294.5 3267.8,280.4 3283.2,267.1 3298.7,254.8 3314.2,243.2 3329.7,232.6 3345.2,222.8 3360.7,214.0 3376.1,206.0 3391.6,199.0 3407.1,192.9 3422.6,187.7 3430.3,185.5 3438.1,183.5 3445.8,181.7 3453.6,180.2 3461.3,178.9 3465.2,178.3 3469.0,177.8 3472.9,177.4 3476.8,177.0 3480.6,176.7 3482.6,176.5 3484.5,176.4 3486.5,176.3 3488.4,176.2 3490.3,176.1 3491.3,176.1 3492.3,176.0 3493.2,176.0 3494.2,176.0 3495.2,176.0 3495.6,176.0 3496.1,176.0 3496.6,175.9 3497.1,175.9 3497.6,175.9 3497.8,175.9 3498.1,175.9 3498.3,175.9 3498.5,175.9 3498.8,175.9 3499.0,175.9 3499.3,175.9 3499.5,175.9 3499.8,175.9 3500.0,175.9"/>
<line x1="419.0" y1="1125.0" x2="3500.0" y2="1125.0" stroke="#666" stroke-width="5"/>
<line x1="615.1" y1="1125.0" x2="615.1" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="811.3" y1="1125.0" x2="811.3" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1007.4" y1="1125.0" x2="1007.4" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1203.6" y1="1125.0" x2="1203.6" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1595.9" y1="1125.0" x2="1595.9" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1792.0" y1="1125.0" x2="1792.0" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="1988.1" y1="1125.0" x2="1988.1" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2184.3" y1="1125.0" x2="2184.3" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2576.6" y1="1125.0" x2="2576.6" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2772.7" y1="1125.0" x2="2772.7" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="2968.9" y1="1125.0" x2="2968.9" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="3165.0" y1="1125.0" x2="3165.0" y2="1101.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1125.0" x2="419.0" y2="1085.0" stroke="#666" stroke-width="5"/>
<line x1="1399.7" y1="1125.0" x2="1399.7" y2="1085.0" stroke="#666" stroke-width="5"/>
<text x="1399.7" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="2380.4" y1="1125.0" x2="2380.4" y2="1085.0" stroke="#666" stroke-width="5"/>
<text x="2380.4" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="3361.1" y1="1125.0" x2="3361.1" y2="1085.0" stroke="#666" stroke-width="5"/>
<text x="3361.1" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">6</text>
<line x1="419.0" y1="100.0" x2="419.0" y2="2150.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1979.2" x2="443.0" y2="1979.2" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1884.3" x2="443.0" y2="1884.3" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1789.4" x2="443.0" y2="1789.4" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1694.5" x2="443.0" y2="1694.5" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1504.7" x2="443.0" y2="1504.7" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1409.7" x2="443.0" y2="1409.7" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1314.8" x2="443.0" y2="1314.8" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1219.9" x2="443.0" y2="1219.9" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="1030.1" x2="443.0" y2="1030.1" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="935.2" x2="443.0" y2="935.2" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="840.3" x2="443.0" y2="840.3" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="745.4" x2="443.0" y2="745.4" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="555.6" x2="443.0" y2="555.6" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="460.7" x2="443.0" y2="460.7" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="365.7" x2="443.0" y2="365.7" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="270.8" x2="443.0" y2="270.8" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="2074.1" x2="459.0" y2="2074.1" stroke="#666" stroke-width="5"/>
<text x="371.8" y="2110.9" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-1.0</text>
<line x1="419.0" y1="1599.6" x2="459.0" y2="1599.6" stroke="#666" stroke-width="5"/>
<text x="371.8" y="1636.3" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-0.5</text>
<line x1="419.0" y1="1125.0" x2="459.0" y2="1125.0" stroke="#666" stroke-width="5"/>
<line x1="419.0" y1="650.5" x2="459.0" y2="650.5" stroke="#666" stroke-width="5"/>
<text x="371.8" y="687.2" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">0.5</text>
<line x1="419.0" y1="175.9" x2="459.0" y2="175.9" stroke="#666" stroke-width="5"/>
<text x="371.8" y="212.7" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.0</text>
</svg>
