tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__plot_options__plot_style_dot_dashed.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Plot[Sin[x], {x, 0, 2 Pi}, PlotStyle -> DotDashed]\")"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" stroke="rgb(94,129,181)" stroke-width="15" stroke-dasharray="10.0,40.0,40.0,40.0" stroke-linecap="round" points="419.0,1125.0 434.5,1095.0 450.0,1065.1 465.4,1035.2 480.9,1005.5 496.4,975.8 511.9,946.3 527.4,916.9 542.9,887.8 558.3,858.9 573.8,830.3 589.3,802.0 604.8,773.9 620.3,746.3 635.8,719.0 651.2,692.1 666.7,665.7 682.2,639.7 697.7,614.2 713.2,589.2 728.6,564.7 744.1,540.8 759.6,517.5 775.1,494.8 790.6,472.7 806.1,451.2 821.5,430.5 837.0,410.4 852.5,391.0 868.0,372.4 883.5,354.5 899.0,337.4 914.4,321.1 929.9,305.6 945.4,290.9 960.9,277.0 976.4,263.9 991.8,251.8 1007.3,240.5 1022.8,230.0 1038.3,220.5 1053.8,211.9 1069.3,204.2 1084.7,197.4 1100.2,191.5 1108.0,188.9 1115.7,186.6 1123.4,184.4 1131.2,182.5 1138.9,180.9 1146.7,179.5 1150.5,178.9 1154.4,178.3 1158.3,177.8 1162.2,177.3 1166.0,177.0 1169.9,176.6 1171.8,176.5 1173.8,176.4 1175.7,176.3 1177.6,176.2 1179.6,176.1 1180.5,176.0 1181.5,176.0 1182.5,176.0 1183.4,176.0 1184.4,175.9 1184.9,175.9 1185.4,175.9 1185.9,175.9 1186.3,175.9 1186.8,175.9 1187.1,175.9 1187.3,175.9 1187.6,175.9 1187.8,175.9 1188.0,175.9 1188.3,175.9 1188.5,175.9 1188.8,175.9 1189.0,175.9 1189.2,175.9 1189.5,175.9 1189.7,175.9 1190.0,175.9 1190.2,175.9 1190.5,175.9 1190.7,175.9 1190.9,175.9 1191.2,175.9 1191.7,175.9 1192.2,175.9 1192.6,175.9 1193.1,175.9 1194.1,175.9 1195.1,176.0 1196.0,176.0 1197.0,176.0 1198.9,176.1 1200.9,176.2 1202.8,176.3 1204.7,176.4 1208.6,176.6 1212.5,177.0 1216.3,177.3 1220.2,177.8 1224.1,178.3 1231.8,179.5 1239.6,180.9 1247.3,182.5 1255.1,184.4 1270.5,188.9 1286.0,194.3 1301.5,200.7 1317.0,207.9 1332.5,216.1 1347.9,225.2 1363.4,235.1 1378.9,246.0 1394.4,257.7 1409.9,270.4 1425.4,283.8 1440.8,298.1 1456.3,313.2 1471.8,329.2 1487.3,345.9 1502.8,363.4 1518.3,381.6 1533.7,400.6 1549.2,420.3 1564.7,440.8 1580.2,461.9 1595.7,483.6 1611.1,506.0 1626.6,529.1 1642.1,552.7 1657.6,576.9 1673.1,601.6 1688.6,626.9 1704.0,652.6 1719.5,678.8 1735.0,705.5 1750.5,732.6 1766.0,760.1 1781.5,787.9 1796.9,816.1 1812.4,844.6 1827.9,873.3 1843.4,902.3 1858.9,931.6 1874.3,961.0 1889.8,990.6 1905.3,1020.3 1920.8,1050.2 1936.3,1080.1 1951.8,1110.0 1967.2,1140.0 1982.7,1169.9 1998.2,1199.8 2013.7,1229.7 2029.2,1259.4 2044.7,1289.0 2060.1,1318.4 2075.6,1347.7 2091.1,1376.7 2106.6,1405.4 2122.1,1433.9 2137.5,1462.1 2153.0,1489.9 2168.5,1517.4 2184.0,1544.5 2199.5,1571.2 2215.0,1597.4 2230.4,1623.1 2245.9,1648.4 2261.4,1673.1 2276.9,1697.3 2292.4,1720.9 2307.9,1744.0 2323.3,1766.4 2338.8,1788.1 2354.3,1809.2 2369.8,1829.7 2385.3,1849.4 2400.7,1868.4 2416.2,1886.6 2431.7,1904.1 2447.2,1920.8 2462.7,1936.8 2478.2,1951.9 2493.6,1966.2 2509.1,1979.6 2524.6,1992.3 2540.1,2004.0 2555.6,2014.9 2571.1,2024.8 2586.5,2033.9 2602.0,2042.1 2617.5,2049.3 2633.0,2055.7 2648.5,2061.1 2656.2,2063.4 2663.9,2065.6 2671.7,2067.5 2679.4,2069.1 2687.2,2070.5 2691.0,2071.1 2694.9,2071.7 2698.8,2072.2 2702.7,2072.7 2706.5,2073.0 2710.4,2073.4 2712.3,2073.5 2714.3,2073.6 2716.2,2073.7 2718.1,2073.8 2720.1,2073.9 2721.0,2074.0 2722.0,2074.0 2723.0,2074.0 2723.9,2074.0 2724.9,2074.1 2725.4,2074.1 2725.9,2074.1 2726.4,2074.1 2726.8,2074.1 2727.3,2074.1 2727.6,2074.1 2727.8,2074.1 2728.1,2074.1 2728.3,2074.1 2728.5,2074.1 2728.8,2074.1 2729.0,2074.1 2729.3,2074.1 2729.5,2074.1 2729.8,2074.1 2730.0,2074.1 2730.2,2074.1 2730.5,2074.1 2730.7,2074.1 2731.0,2074.1 2731.2,2074.1 2731.4,2074.1 2731.7,2074.1 2732.2,2074.1 2732.7,2074.1 2733.1,2074.1 2733.6,2074.1 2734.6,2074.1 2735.6,2074.0 2736.5,2074.0 2737.5,2074.0 2739.4,2073.9 2741.4,2073.8 2743.3,2073.7 2745.2,2073.6 2749.1,2073.4 2753.0,2073.0 2756.8,2072.7 2760.7,2072.2 2764.6,2071.7 2772.3,2070.5 2780.1,2069.1 2787.8,2067.5 2795.6,2065.6 2803.3,2063.4 2818.8,2058.5 2834.3,2052.6 2849.7,2045.8 2865.2,2038.1 2880.7,2029.5 2896.2,2020.0 2911.7,2009.5 2927.2,1998.2 2942.6,1986.1 2958.1,1973.0 2973.6,1959.1 2989.1,1944.4 3004.6,1928.9 3020.0,1912.6 3035.5,1895.5 3051.0,1877.6 3066.5,1859.0 3082.0,1839.6 3097.5,1819.5 3112.9,1798.8 3128.4,1777.3 3143.9,1755.2 3159.4,1732.5 3174.9,1709.2 3190.4,1685.3 3205.8,1660.8 3221.3,1635.8 3236.8,1610.3 3252.3,1584.3 3267.8,1557.9 3283.2,1531.0 3298.7,1503.7 3314.2,1476.1 3329.7,1448.0 3345.2,1419.7 3360.7,1391.1 3376.1,1362.2 3391.6,1333.1 3407.1,1303.7 3422.6,1274.2 3438.1,1244.5 3453.6,1214.8 3469.0,1184.9 3484.5,1155.0 3500.0,1125.0"/>
<line x1="419.0" y1="1125.0" x2="3500.0" y2="1125.0" stroke="#666" stroke-width="10"/>
<line x1="615.1" y1="1125.0" x2="615.1" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="811.3" y1="1125.0" x2="811.3" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="1007.4" y1="1125.0" x2="1007.4" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="1203.6" y1="1125.0" x2="1203.6" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="1595.9" y1="1125.0" x2="1595.9" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="1792.0" y1="1125.0" x2="1792.0" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="1988.1" y1="1125.0" x2="1988.1" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="2184.3" y1="1125.0" x2="2184.3" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="2576.6" y1="1125.0" x2="2576.6" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="2772.7" y1="1125.0" x2="2772.7" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="2968.9" y1="1125.0" x2="2968.9" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="3165.0" y1="1125.0" x2="3165.0" y2="1101.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1125.0" x2="419.0" y2="1085.0" stroke="#666" stroke-width="10"/>
<line x1="1399.7" y1="1125.0" x2="1399.7" y2="1085.0" stroke="#666" stroke-width="10"/>
<text x="1399.7" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="2380.4" y1="1125.0" x2="2380.4" y2="1085.0" stroke="#666" stroke-width="10"/>
<text x="2380.4" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="3361.1" y1="1125.0" x2="3361.1" y2="1085.0" stroke="#666" stroke-width="10"/>
<text x="3361.1" y="1245.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">6</text>
<line x1="419.0" y1="100.0" x2="419.0" y2="2150.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1979.2" x2="443.0" y2="1979.2" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1884.3" x2="443.0" y2="1884.3" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1789.4" x2="443.0" y2="1789.4" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1694.5" x2="443.0" y2="1694.5" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1504.6" x2="443.0" y2="1504.6" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1409.7" x2="443.0" y2="1409.7" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1314.8" x2="443.0" y2="1314.8" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1219.9" x2="443.0" y2="1219.9" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="1030.1" x2="443.0" y2="1030.1" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="935.2" x2="443.0" y2="935.2" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="840.3" x2="443.0" y2="840.3" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="745.4" x2="443.0" y2="745.4" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="555.5" x2="443.0" y2="555.5" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="460.6" x2="443.0" y2="460.6" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="365.7" x2="443.0" y2="365.7" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="270.8" x2="443.0" y2="270.8" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="2074.1" x2="459.0" y2="2074.1" stroke="#666" stroke-width="10"/>
<text x="371.8" y="2110.9" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-1.0</text>
<line x1="419.0" y1="1599.6" x2="459.0" y2="1599.6" stroke="#666" stroke-width="10"/>
<text x="371.8" y="1636.3" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">-0.5</text>
<line x1="419.0" y1="1125.0" x2="459.0" y2="1125.0" stroke="#666" stroke-width="10"/>
<line x1="419.0" y1="650.4" x2="459.0" y2="650.4" stroke="#666" stroke-width="10"/>
<text x="371.8" y="687.2" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">0.5</text>
<line x1="419.0" y1="175.9" x2="459.0" y2="175.9" stroke="#666" stroke-width="10"/>
<text x="371.8" y="212.6" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.0</text>
</svg>
